dataset/test_result/libucl-buggy-5/libucl-buggy-5-5/5.output
Making check in src
make[1]: Entering directory '/home/workspace/src'
  CC       libucl_la-ucl_parser.lo
ucl_parser.c:1:10: fatal error: iostream: No such file or directory
    1 | #include <iostream>
      |          ^~~~~~~~~~
compilation terminated.
make[1]: *** [Makefile:536: libucl_la-ucl_parser.lo] Error 1
make[1]: Leaving directory '/home/workspace/src'
make: *** [Makefile:480: check-recursive] Error 1
